--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 
-<footer class="bg-white border-t p-6 text-sm text-gray-600">© Stradux — demo</footer>
+<footer class="bg-white border-t p-6 text-sm text-gray-600">© SwiftMoney — demo</footer>
