--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -14,7 +14,7 @@
       <span class="icon">🗂</span>
       <span>Dashboard</span>
     </a>
-    <a class="item" routerLink="/requests">
+    <a class="item" routerLink="/requests" routerLinkActive="active">
       <span class="icon">📄</span>
       <span>Requests</span>
     </a>
